[package]
name = "sec"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sec"
path = "src/sec.rs"

[dependencies]
clap = { version="3", features=["derive"] }
log = "0.4"
chrono = "0.4"
anyhow = "1"
aes-gcm = "0.9"
rand_core = { version="0.6", features=["getrandom"] }
md5 = "0.7"
rpassword = "6"
indicatif = "0.17"

[dev-dependencies]
base64 = "0.13"
